network-ınfrastructure/network.tf
provider "aws" {

  region = "${var.region}"

}

resource "aws_vpc" "ecs" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"

  tags {
    Name = "${var.environment}-ecs"
  }
}



# Subnets

resource "aws_subnet" "public-subnet-1" {

  cidr_block        = "${var.public_subnet_1_cidr}"

  vpc_id            = "${aws_vpc.ecs.id}"

  availability_zone = "eu-west-1a"

  tags {

    Name = "${var.environment}-Public-Subnet-1"

  }

}

resource "aws_subnet" "public-subnet-2" {

  cidr_block        = "${var.public_subnet_2_cidr}"

  vpc_id            = "${aws_vpc.ecs.id}"

  availability_zone = "eu-west-1b"

  tags {

    Name = "${var.environment}- Public-Subnet-2"

  }

}

resource "aws_subnet" "public-subnet-3" {

  cidr_block        = "${var.public_subnet_3_cidr}"

  vpc_id            = "${aws_vpc.ecs.id}"

  availability_zone = "eu-west-1c"

  tags {

    Name = "${var.environment}-Public-Subnet-3"

  }

}


# route table configuration

resource "aws_route_table" "public-route-table" {

  vpc_id = "${aws_vpc.ecs.id}"

  tags {

    Name = "${var.environment}- Public-Route-Table"

  }

}

# public subnet associations

resource "aws_route_table_association" "public-route-1-association" {

  route_table_id = "${aws_route_table.public-route-table.id}"

  subnet_id      = "${aws_subnet.public-subnet-1.id}"

}

resource "aws_route_table_association" "public-route-2-association" {

  route_table_id = "${aws_route_table.public-route-table.id}"

  subnet_id      = "${aws_subnet.public-subnet-2.id}"

}

resource "aws_route_table_association" "public-route-3-association" {

  route_table_id = "${aws_route_table.public-route-table.id}"

  subnet_id      = "${aws_subnet.public-subnet-3.id}"

}


# private subnet 

resource "aws_subnet" "private-subnet-1" {

  cidr_block        = "${var.private_subnet_1_cidr}"

  vpc_id            = "${aws_vpc.ecs.id}"

  availability_zone = "eu-west-1a"

  tags {

    Name = "${var.environment} - Private-Subnet-1"

  }

}

resource "aws_subnet" "private-subnet-2" {

  cidr_block        = "${var.private_subnet_2_cidr}"

  vpc_id            = "${aws_vpc.ecs.id}"

  availability_zone = "eu-west-1b"

  tags {

    Name = "${var.environment} - Private-Subnet-2"

  }

}

resource "aws_subnet" "private-subnet-3" {

  cidr_block        = "${var.private_subnet_3_cidr}"

  vpc_id            = "${aws_vpc.ecs.id}"

  availability_zone = "eu-west-1c"

  tags {

    Name = "${var.environment} - Private-Subnet-3"

  }

}


# private subnet s route table
resource "aws_route_table" "private-route-table" {

  vpc_id = "${aws_vpc.ecs.id}"

  tags {

    Name = "${var.environment}- Private-Route-Table"

  }

}


resource "aws_route_table_association" "private-route-1-association" {

  route_table_id = "${aws_route_table.private-route-table.id}"

  subnet_id      = "${aws_subnet.private-subnet-1.id}"

}

resource "aws_route_table_association" "private-route-2-association" {

  route_table_id = "${aws_route_table.private-route-table.id}"

  subnet_id      = "${aws_subnet.private-subnet-2.id}"

}

resource "aws_route_table_association" "private-route-3-association" {

  route_table_id = "${aws_route_table.private-route-table.id}"

  subnet_id      = "${aws_subnet.private-subnet-3.id}"

}




resource "aws_eip" "elastic-ip-for-nat-gw" {

  vpc                       = true

  associate_with_private_ip = "10.0.0.22"

  tags {

    Name = "Production-EIP"

  }

}


resource "aws_nat_gateway" "nat-gw" {

  allocation_id = "${aws_eip.elastic-ip-for-nat-gw.id}"

  subnet_id     = "${aws_subnet.public-subnet-1.id}"

  tags {

    Name = "Production-NAT-GW"

  }

  depends_on = ["aws_eip.elastic-ip-for-nat-gw"]

}


resource "aws_internet_gateway" "production-igw" {

  vpc_id = "${aws_vpc.ecs.id}"
  
  depends_on = ["aws_vpc.ecs"]


  tags {

    Name = "${var.environment}-Production-IGW"

  }
  

}


resource "aws_route" "public-internet-igw-route" {

  route_table_id         = "${aws_route_table.public-route-table.id}"

  gateway_id             = "${aws_internet_gateway.production-igw.id}"

  destination_cidr_block = "0.0.0.0/0"

}
